WCPSServer/src/main/java/antlr/WCPSParser.java
// Generated from C:/Users/Xiaomi/Desktop/Learning/Курсовой проект 3/Никольский_Владислав_БПИ185_Курсовой_проект_3_курс/Программа/WCPSServer/src/main/java/antlr\WCPS.g4 by ANTLR 4.9.1
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WCPSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		FOR=39, IN=40, LET=41, WHERE=42, RETURN=43, COVERAGE=44, OVER=45, VALUE=46, 
		LIST=47, VALUES=48, CONDENSE=49, USING=50, SWITCH=51, CASE=52, DEFAULT=53, 
		TRUE=54, FALSE=55, INTEGER=56, INTEGER_8=57, INTEGER_16=58, FLOAT=59, 
		STR=60, NAME=61, VARNAME=62, WS=63, ANY=64;
	public static final int
		RULE_processCoveragesExpr = 0, RULE_coverageNamesDefinition = 1, RULE_coverageNameDefinition = 2, 
		RULE_reductCoverageNamesDefinition = 3, RULE_reductCoverageNameDefinition = 4, 
		RULE_coverageList = 5, RULE_coverageName = 6, RULE_wherePart = 7, RULE_returnPart = 8, 
		RULE_express = 9, RULE_funList = 10, RULE_funListElement = 11, RULE_nameList = 12, 
		RULE_crsList = 13, RULE_lightConstructor = 14, RULE_hardConstructor = 15, 
		RULE_constructorCoverage = 16, RULE_constructorOver = 17, RULE_constructorValues = 18, 
		RULE_constructorValueElement = 19, RULE_axisIteratorList = 20, RULE_axisIterator = 21, 
		RULE_constructorElement = 22, RULE_caseExp = 23, RULE_defaultExp = 24, 
		RULE_condensePart = 25, RULE_condenseOver = 26, RULE_condenseWhere = 27, 
		RULE_condenseUsing = 28, RULE_dimensionIntervalList = 29, RULE_dimensionPointElement = 30, 
		RULE_dimensionIntervalElement = 31, RULE_dimensionIntervalExpr = 32, RULE_constant = 33, 
		RULE_multOp = 34, RULE_addOp = 35, RULE_compOp = 36, RULE_condenseOpType = 37, 
		RULE_rangeType = 38, RULE_complexConstant = 39, RULE_booleanConstant = 40, 
		RULE_integerConstant = 41, RULE_floatConstant = 42, RULE_stringConstant = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"processCoveragesExpr", "coverageNamesDefinition", "coverageNameDefinition", 
			"reductCoverageNamesDefinition", "reductCoverageNameDefinition", "coverageList", 
			"coverageName", "wherePart", "returnPart", "express", "funList", "funListElement", 
			"nameList", "crsList", "lightConstructor", "hardConstructor", "constructorCoverage", 
			"constructorOver", "constructorValues", "constructorValueElement", "axisIteratorList", 
			"axisIterator", "constructorElement", "caseExp", "defaultExp", "condensePart", 
			"condenseOver", "condenseWhere", "condenseUsing", "dimensionIntervalList", 
			"dimensionPointElement", "dimensionIntervalElement", "dimensionIntervalExpr", 
			"constant", "multOp", "addOp", "compOp", "condenseOpType", "rangeType", 
			"complexConstant", "booleanConstant", "integerConstant", "floatConstant", 
			"stringConstant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'('", "')'", "':='", "'.'", "'['", "']'", "'-'", "'+'", 
			"'not'", "'and'", "'or'", "'xor'", "'{'", "'}'", "':'", "'struct'", "';'", 
			"'<'", "'>'", "'*'", "'/'", "'='", "'!='", "'>='", "'<='", "'max'", "'min'", 
			"'bool'", "'char'", "'unsigned'", "'short'", "'int'", "'long'", "'float'", 
			"'double'", "'complex'", "'complex2'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "FOR", "IN", "LET", "WHERE", "RETURN", "COVERAGE", 
			"OVER", "VALUE", "LIST", "VALUES", "CONDENSE", "USING", "SWITCH", "CASE", 
			"DEFAULT", "TRUE", "FALSE", "INTEGER", "INTEGER_8", "INTEGER_16", "FLOAT", 
			"STR", "NAME", "VARNAME", "WS", "ANY"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WCPS.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WCPSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProcessCoveragesExprContext extends ParserRuleContext {
		public CoverageNamesDefinitionContext coverageNamesDefinition() {
			return getRuleContext(CoverageNamesDefinitionContext.class,0);
		}
		public ReturnPartContext returnPart() {
			return getRuleContext(ReturnPartContext.class,0);
		}
		public TerminalNode EOF() { return getToken(WCPSParser.EOF, 0); }
		public ReductCoverageNamesDefinitionContext reductCoverageNamesDefinition() {
			return getRuleContext(ReductCoverageNamesDefinitionContext.class,0);
		}
		public WherePartContext wherePart() {
			return getRuleContext(WherePartContext.class,0);
		}
		public ProcessCoveragesExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processCoveragesExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterProcessCoveragesExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitProcessCoveragesExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitProcessCoveragesExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcessCoveragesExprContext processCoveragesExpr() throws RecognitionException {
		ProcessCoveragesExprContext _localctx = new ProcessCoveragesExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_processCoveragesExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			coverageNamesDefinition();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LET) {
				{
				setState(89);
				reductCoverageNamesDefinition();
				}
			}

			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(92);
				wherePart();
				}
			}

			setState(95);
			returnPart();
			setState(96);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoverageNamesDefinitionContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(WCPSParser.FOR, 0); }
		public List<CoverageNameDefinitionContext> coverageNameDefinition() {
			return getRuleContexts(CoverageNameDefinitionContext.class);
		}
		public CoverageNameDefinitionContext coverageNameDefinition(int i) {
			return getRuleContext(CoverageNameDefinitionContext.class,i);
		}
		public CoverageNamesDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coverageNamesDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterCoverageNamesDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitCoverageNamesDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitCoverageNamesDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CoverageNamesDefinitionContext coverageNamesDefinition() throws RecognitionException {
		CoverageNamesDefinitionContext _localctx = new CoverageNamesDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_coverageNamesDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(FOR);
			setState(99);
			coverageNameDefinition();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(100);
				match(T__0);
				setState(101);
				coverageNameDefinition();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoverageNameDefinitionContext extends ParserRuleContext {
		public CoverageNameContext coverageName() {
			return getRuleContext(CoverageNameContext.class,0);
		}
		public TerminalNode IN() { return getToken(WCPSParser.IN, 0); }
		public CoverageListContext coverageList() {
			return getRuleContext(CoverageListContext.class,0);
		}
		public CoverageNameDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coverageNameDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterCoverageNameDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitCoverageNameDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitCoverageNameDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CoverageNameDefinitionContext coverageNameDefinition() throws RecognitionException {
		CoverageNameDefinitionContext _localctx = new CoverageNameDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_coverageNameDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			coverageName();
			setState(108);
			match(IN);
			setState(109);
			match(T__1);
			setState(110);
			coverageList();
			setState(111);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReductCoverageNamesDefinitionContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(WCPSParser.LET, 0); }
		public List<ReductCoverageNameDefinitionContext> reductCoverageNameDefinition() {
			return getRuleContexts(ReductCoverageNameDefinitionContext.class);
		}
		public ReductCoverageNameDefinitionContext reductCoverageNameDefinition(int i) {
			return getRuleContext(ReductCoverageNameDefinitionContext.class,i);
		}
		public ReductCoverageNamesDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reductCoverageNamesDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterReductCoverageNamesDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitReductCoverageNamesDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitReductCoverageNamesDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReductCoverageNamesDefinitionContext reductCoverageNamesDefinition() throws RecognitionException {
		ReductCoverageNamesDefinitionContext _localctx = new ReductCoverageNamesDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_reductCoverageNamesDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(LET);
			setState(114);
			reductCoverageNameDefinition();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(115);
				match(T__0);
				setState(116);
				reductCoverageNameDefinition();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReductCoverageNameDefinitionContext extends ParserRuleContext {
		public CoverageNameContext coverageName() {
			return getRuleContext(CoverageNameContext.class,0);
		}
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public ReductCoverageNameDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reductCoverageNameDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterReductCoverageNameDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitReductCoverageNameDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitReductCoverageNameDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReductCoverageNameDefinitionContext reductCoverageNameDefinition() throws RecognitionException {
		ReductCoverageNameDefinitionContext _localctx = new ReductCoverageNameDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_reductCoverageNameDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			coverageName();
			setState(123);
			match(T__3);
			setState(124);
			express(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoverageListContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(WCPSParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(WCPSParser.NAME, i);
		}
		public CoverageListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coverageList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterCoverageList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitCoverageList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitCoverageList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CoverageListContext coverageList() throws RecognitionException {
		CoverageListContext _localctx = new CoverageListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_coverageList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(NAME);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(127);
				match(T__0);
				setState(128);
				match(NAME);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CoverageNameContext extends ParserRuleContext {
		public TerminalNode VARNAME() { return getToken(WCPSParser.VARNAME, 0); }
		public TerminalNode NAME() { return getToken(WCPSParser.NAME, 0); }
		public CoverageNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_coverageName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterCoverageName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitCoverageName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitCoverageName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CoverageNameContext coverageName() throws RecognitionException {
		CoverageNameContext _localctx = new CoverageNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_coverageName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ( !(_la==NAME || _la==VARNAME) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WherePartContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(WCPSParser.WHERE, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public WherePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wherePart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterWherePart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitWherePart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitWherePart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WherePartContext wherePart() throws RecognitionException {
		WherePartContext _localctx = new WherePartContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_wherePart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(WHERE);
			setState(137);
			express(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnPartContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(WCPSParser.RETURN, 0); }
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public ReturnPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterReturnPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitReturnPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitReturnPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnPartContext returnPart() throws RecognitionException {
		ReturnPartContext _localctx = new ReturnPartContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_returnPart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(RETURN);
			setState(140);
			express(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressContext extends ParserRuleContext {
		public ExpressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_express; }
	 
		public ExpressContext() { }
		public void copyFrom(ExpressContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class UnaryPlusExpContext extends ExpressContext {
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public UnaryPlusExpContext(ExpressContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterUnaryPlusExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitUnaryPlusExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitUnaryPlusExp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class HardConstructorExpContext extends ExpressContext {
		public HardConstructorContext hardConstructor() {
			return getRuleContext(HardConstructorContext.class,0);
		}
		public HardConstructorExpContext(ExpressContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterHardConstructorExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitHardConstructorExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitHardConstructorExp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FieldExpContext extends ExpressContext {
		public ExpressContext express() {
			return getRuleContext(ExpressContext.class,0);
		}
		public TerminalNode NAME() { return getToken(WCPSParser.NAME, 0); }
		public FieldExpContext(ExpressContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterFieldExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitFieldExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WCPSVisitor ) return ((WCPSVisitor<? extends T>)visitor).visitFieldExp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class SwitchExpContext extends ExpressContext {
		public TerminalNode SWITCH() { return getToken(WCPSParser.SWITCH, 0); }
		public List<CaseExpContext> caseExp() {
			return getRuleContexts(CaseExpContext.class);
		}
		public CaseExpContext caseExp(int i) {
			return getRuleContext(CaseExpContext.class,i);
		}
		public DefaultExpContext defaultExp() {
			return getRuleContext(DefaultExpContext.class,0);
		}
		public SwitchExpContext(ExpressContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).enterSwitchExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WCPSListener ) ((WCPSListener)listener).exitSwitchExp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
